--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		<div class="row">
 			<div class="item features-without-image col-12 col-md-6 col-lg-4 active">
 				<div class="item-wrapper">
-					<span class="mbr-iconfont m-auto socicon-instagram socicon"></span>
+					<a href="https://www.instagram.com/play.ungraven/" target="_blank"><span class="mbr-iconfont m-auto socicon-instagram socicon"></span></a>
 					<div class="card-box">
 						<h4 class="card-title mbr-fonts-style mb-1 display-7">
 							<strong>Instagram</strong>
