--- a/index.html
+++ b/index.html
@@ -118,15 +118,14 @@
 			<div class="col-12 col-md-12 col-lg">
 				<div class="text-wrapper align-left">
 					<h1 class="mbr-section-title mbr-fonts-style mb-4 display-2"><strong>- THE GAME -</strong></h1>
-					<p class="mbr-text align-left mbr-fonts-style mb-4 display-7">It's been a thousand years since the Fortress vanished from the world. The Portals, once used to join nations, became dormant until their powers were no more than legends.
+					<p class="mbr-text align-left mbr-fonts-style mb-4 display-7">It's been a thousand years since The Fortress vanished from the world. The Entrances - magical portals once used to join nations - remained dormant for centuries, until their powers were no more than legends.
 <br>
-<br>
-<br>But one day, the tales of legendary Weapons, god-like Crystals and Lost Civilizations suddenly became truth, when the Portals regained their power. Leading everyone into a ruined Dungeon frozen in time.
+<br>But centuries later, the tales of Legendary Weapons, God-like Crystals and Lost Civilizations suddenly became truth, when The Fortress inexplicably regained its power. Its Entrances reactivated all around the planet, leading only the bravest into the remains of an underground kingdom frozen in time.
 <br>​
 <br>​​
-<br>In this 3 vs 3 multiplayer game, two teams of explorers battle within an ancient fortress in search for the Dungeon Core, a lost source of ancient energy. Along their way, they won't just face each other, but also dangerous monsters that roam the room-based map. To achieve their goal they must master their abilities, level up their Stats and obtain Elemental Roguelike-style powerups!
+<br>In this 3 vs 3 multiplayer game, two teams of explorers battle within an ancient fortress in search for the Dungeon Core, a lost source of infinite energy. In their way, they won’t just face each other, but also dangerous monsters that roam the room-based map. To achieve their goal, they must master their abilities, level up their Stats and get Elemental Roguelike-style powerups!
 <br>
-<br>This original MOBA is reinventing the formula, inspired by our favorite Dungeon-Crawling and Roguelike games. Explore a MOBA-style dungeon with our 6 playable characters, each with unique archetypes and abilities!</p>
+<br>This original multiplayer experience is breaking the MOBA formula, inspired by our favorite Dungeon-Crawling and Roguelike games. Explore the dungeon with our 6 playable characters, each with unique archetypes and abilities, and be the first one to conquer the Core!</p>
 					
 				</div>
 			</div>
@@ -150,8 +149,8 @@
 </div><div>We just graduated from Animation and Game Design careers and wanted to create
 </div><div>the multiplayer experience we've always dreamed of.
 </div><div>​
-</div><div>From a Final-Degree-Project to a fully-fleshed PvP game, we are using some
-</div><div>powerful Netcode providers, while testing out a Pre-Alpha DEMO to polish
+</div><div>From a Final-Degree-Project to a fully-fleshed PvP game, we are using some of the
+</div><div>most powerful Netcode providers, while testing out a Pre-Alpha DEMO to polish
 </div><div>the game's design and get as much feedback as possible!</div><div>
 </div><div>
 </div><div>
@@ -249,7 +248,8 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><p style="margin: 0;text-align: center;" class="display-7">&#8204;</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/scrollgallery/scroll-gallery.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section>
+<script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/scrollgallery/scroll-gallery.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
