--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
 						<a class="nav-link link text-secondary text-primary display-7" href="index.html#header14-l">Contact</a>
 					</li></ul>
 				
-				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-success display-7" href="https://discord.gg/dDHAj5eF9v"><span class="socicon socicon-discord mbr-iconfont mbr-iconfont-btn"></span>Join us!</a></div>
+				<div class="navbar-buttons mbr-section-btn"><a class="btn btn-success display-7"
+   href="https://discord.gg/dDHAj5eF9v"
+   target="_blank"
+   rel="noopener noreferrer"><span class="socicon socicon-discord mbr-iconfont mbr-iconfont-btn"></span>Join us!</a></div>
 			</div>
 		</div>
 	</nav>
@@ -202,7 +205,10 @@
         <h1 class="mbr-section-title mbr-fonts-style mb-4 display-1">
           <strong>JOIN THE DUNGEON</strong><br></h1>
         <p class="mbr-fonts-style mbr-text mb-4 display-5">IN OUR DISCORD</p>
-        <div class="mbr-section-btn"><a class="btn btn-success display-7" href="https://discord.gg/dDHAj5eF9v">&nbsp; &nbsp;JOIN&nbsp; &nbsp;</a></div>
+        <div class="mbr-section-btn"><a class="btn btn-success display-7"
+   href="https://discord.gg/dDHAj5eF9v"
+   target="_blank"
+   rel="noopener noreferrer">&nbsp; &nbsp;JOIN&nbsp; &nbsp;</a></div>
         
       </div>
     </div>
@@ -225,8 +231,20 @@
                 <div class="text-wrapper">
                     <h1 class="mbr-section-title mbr-fonts-style mb-3 display-2"><strong>FOLLOW US!</strong></h1>
                     <p class="mbr-text mbr-fonts-style display-7">We will post Dev-blog videos soon!! So you can follow the game's development and know when we launch public builds in Discord!&nbsp;<br></p>
-                    <div class="mbr-section-btn mt-3"><a class="btn btn-secondary display-7" href="https://www.instagram.com/play.ungraven/">Instagram</a>
-                        <a class="btn btn-success display-7" href="https://www.youtube.com/@Ungraven">Youtube</a></div>
+                    <div class="mbr-section-btn mt-3">
+					<a class="btn btn-secondary display-7"
+					   href="https://www.instagram.com/play.ungraven/"
+					   target="_blank"
+					   rel="noopener noreferrer">
+					  Instagram
+					</a>
+
+					<a class="btn btn-success display-7"
+					   href="https://www.youtube.com/@Ungraven"
+					   target="_blank"
+					   rel="noopener noreferrer">
+					  YouTube
+					</a>
                 </div>
             </div>
         </div>
