--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 </div><div>We just graduated from Animation and Game Design careers and wanted to create
 </div><div>the multiplayer experience we've always dreamed of.
 </div><div>​
-</div><div>From a Final-Degree-Project to a fully-fleshed PvP game, we are using some of the
-</div><div>most powerful Netcode providers, while testing out a Pre-Alpha DEMO to polish
+</div><div>From a Final-Degree-Project to a fully-fleshed PvP game! We are currently using
+</div><div>powerful Netcode providers, while testing out a Pre-Alpha DEMO. Looking to polish
 </div><div>the game's design and get as much feedback as possible!</div><div>
 </div><div>
 </div><div>
